tests/models/enum/named/isize/pass/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(ge = 2)]
        value: isize
    },
}
fn main() {}
