tests/models/enum/named/isize/fail/min_items.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(min_items = 2)]
        value: isize
    },
}
fn main() {}
